
package com.ACMD.app.Engine_Layer.StorageManagement;

public enum ItemType
{
    ARMA,
    ARMATURA,
    POZIONE_CURA,
    POZIONE_DANNO,
    POZIONE_FORZA,
    POZIONE_RESISTENZA,
    POZIONE_VELENO,
    POZIONE_INVALIDITA,
    CIBO,
    EASTER_EGG;

    public static int NumeroEnum = 9;   //tolto EASTER_EGG
}
